# Heart_disease

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: schema.yaml
heart_disease/: constants.py
heart_disease/api/: __init__.py  app.py  drift_monitor.py  prediction_store.py  retrain_jobs.py  routes.py  schemas.py
heart_disease/api/static/: index.html
heart_disease/pipelines/: predict.py  train.py
heart_disease/pipelines/components/: dataset.py  features.py
scripts/: docker-entrypoint.sh
tests/: conftest.py  test_app.py  test_routes.py  test_schemas.py
tests/api/: test_drift_monitor.py  test_prediction_store.py  test_routes.py
tests/pipelines/: __init__.py  conftest.py  test_predict.py  test_train.py
tests/pipelines/components/: __init__.py  test_dataset.py  test_features.py
